--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/hackathonnew.png" alt="Hackathon Logo" width="90" height="30" /></a></div>
+				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/hackathon.png" alt="Hackathon Logo" width="90" height="30" /></a></div>
 				{% include navigation.html %}
 			</div>
 		</header>
