--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
-$brand-color: #9d0000;
-$secondary-brand-color: #9d0000;
+$brand-color: #00d8e0;
+$secondary-brand-color: #00d8e0;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
 // Breakpoints
