--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 		{% feed_meta %}
 
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
+		<!-- <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png"> -->
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
 			<script>
@@ -25,7 +25,8 @@
 			<div class="container">
 				<div class="company-name">
 					<a href="{{ site.baseurl }}/">
-						<img src="{{ site.baseurl }}/favicon.png" alt="Hackathon Logo" width="90" height="30" />
+						<!-- <img src="{{ site.baseurl }}/favicon.png" alt="Hackathon Logo" width="90" height="30" /> -->
+						<span>UWW Hackathon</span>
 					</a>
 				</div>
 				{% include navigation.html %}
