--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 				<div class="company-name">
 					<a href="{{ site.baseurl }}/">
 						<!-- <img src="{{ site.baseurl }}/favicon.png" alt="Hackathon Logo" width="90" height="30" /> -->
-						<span>UWW Hackathon</span>
+						<span style="font-size: 40px;  position: relative; top: 10px;" >UWW Hackathon</span>
 					</a>
 				</div>
 				{% include navigation.html %}
