--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -22,6 +22,7 @@ header {
 	padding: 20px 0;
 	background: $brand-color; /* Old browsers */
 	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%) no-repeat $brand-color;
+	height: 20px;
 
 	a {
 		color: #fff;
@@ -37,7 +38,7 @@ header {
 	.company-name {
 		font-size: 1.7em;
 		line-height: 0;
-
+		width: auto;
 		a {
 			display: inline-block;
 		}
